removed jquery dependency

--- a/package.json
+++ b/package.json
@@ -12,7 +12,5 @@
     "devDependencies": {
         "electron": "^1.7.16"
     },
-    "dependencies": {
-        "jquery": "^3.6.0"
-    }
+    "dependencies": {}
 }
