--- a/package.json
+++ b/package.json
@@ -1,16 +1,52 @@
 {
-    "name": "eso-crafting-calculator",
-    "version": "0.1.0",
-    "description": "Calculates the materials required to craft items",
-    "main": "main.js",
-    "scripts": {
-        "start": "electron ."
-    },
-    "repository": "git://github.com/deltj/eso-crafting-calculator.git",
-    "author": "Ted DeLoggio",
-    "license": "MIT",
-    "devDependencies": {
-        "electron": "^1.7.16"
-    },
-    "dependencies": {}
+  "name": "eso-crafting-calculator",
+  "version": "0.1.0",
+  "description": "Calculates the materials required to craft items",
+  "main": "main.js",
+  "scripts": {
+    "start": "electron-forge start",
+    "package": "electron-forge package",
+    "make": "electron-forge make"
+  },
+  "repository": "git://github.com/deltj/eso-crafting-calculator.git",
+  "author": "Ted DeLoggio",
+  "license": "MIT",
+  "devDependencies": {
+    "@electron-forge/cli": "^6.0.0-beta.61",
+    "@electron-forge/maker-deb": "^6.0.0-beta.61",
+    "@electron-forge/maker-rpm": "^6.0.0-beta.61",
+    "@electron-forge/maker-squirrel": "^6.0.0-beta.61",
+    "@electron-forge/maker-zip": "^6.0.0-beta.61",
+    "electron": "^1.8.8"
+  },
+  "dependencies": {
+    "electron-squirrel-startup": "^1.0.0"
+  },
+  "config": {
+    "forge": {
+      "packagerConfig": {},
+      "makers": [
+        {
+          "name": "@electron-forge/maker-squirrel",
+          "config": {
+            "name": "eso_crafting_calculator"
+          }
+        },
+        {
+          "name": "@electron-forge/maker-zip",
+          "platforms": [
+            "darwin"
+          ]
+        },
+        {
+          "name": "@electron-forge/maker-deb",
+          "config": {}
+        },
+        {
+          "name": "@electron-forge/maker-rpm",
+          "config": {}
+        }
+      ]
+    }
+  }
 }
